--- a/gb/19/2/8/n11032440.md
+++ b/gb/19/2/8/n11032440.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wfcpbv3604/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wfcpbv3604/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wfcpbv3604/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“精美绝伦”运营经理观神韵感动落泪</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/02/1902080729162124-600x400.jpg" />
 <h6>2019年2月8日晚，Famiza co.公司运营经理Samuel Lison观赏了神韵世界艺术团在墨尔本的首场演出。（史迪／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年02月08日讯】（大纪元记者史迪澳洲墨尔本报导）2月8日晚，<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在澳大利亚奢华典雅的<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC%E4%B8%BD%E6%99%B6%E5%89%A7%E9%99%A2.md#1">墨尔本丽晶剧院</a>（Regent Theatre）上演了在澳纽六大城市32场演出的首演。神韵艺术家通过技艺精湛的舞蹈、亮丽灵动的色彩组合、出神入化的天幕设计，再现中华五千年<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E7%A5%9E%E4%BC%A0%E6%96%87%E5%8C%96.md#1">神传文化</a>所蕴含的神圣之美。</p>
-<p>“太精彩了！”一家大型餐饮公司运营经理Samuel Lison惊叹<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>是精美绝伦的艺术品，特别是因为遭受迫害致失明的少女的故事，让他感动落泪。</p>
+	<p>【大纪元2019年02月08日讯】（大纪元记者史迪澳洲墨尔本报导）2月8日晚，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在澳大利亚奢华典雅的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC%E4%B8%BD%E6%99%B6%E5%89%A7%E9%99%A2.md#1">墨尔本丽晶剧院</a>（Regent Theatre）上演了在澳纽六大城市32场演出的首演。神韵艺术家通过技艺精湛的舞蹈、亮丽灵动的色彩组合、出神入化的天幕设计，再现中华五千年<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E4%BC%A0%E6%96%87%E5%8C%96.md#1">神传文化</a>所蕴含的神圣之美。</p>
+<p>“太精彩了！”一家大型餐饮公司运营经理Samuel Lison惊叹<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>是精美绝伦的艺术品，特别是因为遭受迫害致失明的少女的故事，让他感动落泪。</p>
 <p>Lison先生第一次观看到气势宏大、精彩绝伦的神韵演出，“我们看到神韵在脸书上的推广后，产生了浓厚兴趣，想来观赏这个演出。”</p>
 <p>神韵舞蹈极富表现力，让不了解中国文化的Lison留下了深刻的印象，特别是那个餐厅的故事，“我非常喜欢这个节目，是非常欢乐的一家餐厅！”</p>
-<p>而让Lison感动落泪的，是那个因<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>遭受迫害的少女，在监狱里被摘除眼角膜、双目失明的现代故事。“当她获得神佛的庇护，重新自由地（获得）信仰时，我很高兴。”Lison为正义最终战胜邪恶激动不已。</p>
+<p>而让Lison感动落泪的，是那个因<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>遭受迫害的少女，在监狱里被摘除眼角膜、双目失明的现代故事。“当她获得神佛的庇护，重新自由地（获得）信仰时，我很高兴。”Lison为正义最终战胜邪恶激动不已。</p>
 <p>“我非常喜欢这场演出！”Lison最后表示，他将向同事或朋友推荐这场难以忘怀的演出。</p>
 <p>责任编辑：李欣然</p>
 	
@@ -18,44 +18,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/2/1/n11016908.md#1">日本埼玉首场 主流人士推崇神韵内涵深邃</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/2/1/n11017233.md#1">著名芭蕾舞演员：神韵层次极高 表现力惊人</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/2/1/n11017272.md#1">想与神韵演员遨游天界 日企主管赞演出精彩</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/2/1/n11017445.md#1">马国设计师飞日本追看神韵 赞壮观感人</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/2/1/n11018308.md#1">神韵引爆热潮 社长夫妇激赞神传文明辉煌</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/2/7/n11029325.md#1">神韵抵达澳洲 开启2019年大洋洲巡回演出</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/1/n11016908.md#1">日本埼玉首场 主流人士推崇神韵内涵深邃</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/1/n11017233.md#1">著名芭蕾舞演员：神韵层次极高 表现力惊人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/1/n11017272.md#1">想与神韵演员遨游天界 日企主管赞演出精彩</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/1/n11017445.md#1">马国设计师飞日本追看神韵 赞壮观感人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/1/n11018308.md#1">神韵引爆热潮 社长夫妇激赞神传文明辉煌</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/2/7/n11029325.md#1">神韵抵达澳洲 开启2019年大洋洲巡回演出</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/5/n10955771.md#1" target="_blank">林辉：携美资料返国 中国石油之父最终绝望</a></li><li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245419.md#1" target="_blank">长夜尽头 一缕金色的彩霞</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/14/n12619436.md#1">庚子冬至木土合相 太史公和星象师有说道</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/10/3/n12449869.md#1">《圣经》与《推背图》预言的应验与变换10</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/1/n12587271.md#1">人长猪蹄 猪长人手 见证人畜间轮回转生</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/22/n12636787.md#1">【横河直播】法律重点转投票机 议员挑战选举人</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/21/n12636019.md#1">【重播】美代理国土安全部长谈中共挑战</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/21/n12635627.md#1">【新闻大家谈】川普戒严令出局 新疫情凶猛？</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12633433.md#1">【大选更新12.20】YouTube删除川普律师的国会证词</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/19/n12632507.md#1">北京香堂村遭强拆 政大教授警告：将正当防卫</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12634263.md#1">川普团队向最高法院提诉 展开“宪法战”</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/19/n12631225.md#1">刘涛拍戏腰伤难忍 坐不久站不直片场缩成一团</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12633975.md#1">港警涉性侵六女童 黄秋生呛某影后默不作声</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12634288.md#1">赵薇罕见用灰色形容爱情 被疑与黄有龙婚变</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12632966.md#1">1939《华府风云》影评：打场正义之战</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12632904.md#1">“木曜四超玩”跨界开唱 黄明志惊喜现身</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/19/n12632461.md#1">脑中风4大前兆千万别忽略！症状、治疗和复健全图解</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/20/n12634295.md#1">冬至补一天 身体变好一年 中医推荐6种天然补药</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/21/n12634867.md#1">不忍流浪汉受冻 美国男子脱下运动裤给他穿</a></li>
-<li><a href="https://github.com/ndbhcw3425/djy/blob/master/gb/20/12/19/n12632302.md#1">高血压硬降其实很伤身？中医揭健康降血压的关键</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wfcpbv3604/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wfcpbv3604/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/8/n11032440.htm">“精美绝伦”运营经理观神韵感动落泪</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/8/n11032440.htm">“精美绝伦”运营经理观神韵感动落泪</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wfcpbv3604/djy/blob/master/gb/19/2/8/n11032440.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wfcpbv3604/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wfcpbv3604/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/2/8/n11032440.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
